--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,102 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
+        font-family: "BTB";
     }
     div{
         display: flex;
         flex-direction: row;
         justify-content: center;
+        font-family: "BTB";
+    }
+     @font-face {
+      font-family: 'BTB';
+      src: url("../fonts/built\ titling\ bd.otf") format('opentype');
+     }
+     .IMG1{
+      width: 35%;
+     }
+      @font-face {
+      font-family: 'BTS';
+      src: url("../fonts/built\ titling\ sb.otf") format('opentype');
+     }
+     .txt1{
+      font-family: "BTS";
+     }
+         .form-section {
+      max-width: 900px;
+      margin: 50px auto;
+      padding: 20px;
+      text-align: center;
+    }
+
+    .form-section p {
+      margin-bottom: 30px;
+      font-size: 0.95rem;
+      letter-spacing: 0.5px;
+    }
+
+    form {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+    }
+
+    .form-group {
+      flex: 1 1 45%;
+      display: flex;
+      flex-direction: column;
+    }
+
+    label {
+      font-size: 0.85rem;
+      margin-bottom: 5px;
+      text-align: left;
+    }
+
+    input[type="text"],
+    input[type="email"],
+    input[type="tel"] {
+      padding: 12px;
+      border: none;
+      background-color: #fff;
+      color: #000;
+      font-size: 0.95rem;
+    }
+
+    .checkbox-group {
+      flex: 1 1 100%;
+      text-align: left;
+    }
+
+    .checkbox-group input {
+      margin-right: 8px;
+    }
+
+    .checkbox-group label {
+      font-size: 0.85rem;
+    }
+
+    .submit-button {
+      margin-top: 30px;
+      padding: 12px 30px;
+      background-color: #000;
+      color: #fff;
+      border: 1px solid #fff;
+      cursor: pointer;
+      font-weight: bold;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+
+    .submit-button:hover {
+      background-color: #fff;
+      color: #000;
+    }
+
+    @media (max-width: 768px) {
+      .form-group {
+        flex: 1 1 100%;
+      }
     }
