--- a/css/style.css
+++ b/css/style.css
@@ -39,21 +39,21 @@ body{
         justify-content: center;
         font-family: "BTB";
     }
-     @font-face {
+    @font-face {
       font-family: 'BTB';
       src: url("../fonts/built\ titling\ bd.otf") format('opentype');
      }
-     .IMG1{
-      width: 35%;
+    .IMG1{
+      width: 30%;
      }
       @font-face {
       font-family: 'BTS';
       src: url("../fonts/built\ titling\ sb.otf") format('opentype');
      }
-     .txt1{
+    .txt1{
       font-family: "BTS";
      }
-         .form-section {
+    .form-section {
       max-width: 900px;
       margin: 50px auto;
       padding: 20px;
@@ -61,9 +61,13 @@ body{
     }
 
     .form-section p {
+      display: flex;
+      flex-direction: column;
+      gap: 40px;
       margin-bottom: 30px;
       font-size: 0.95rem;
       letter-spacing: 0.5px;
+
     }
 
     form {
@@ -129,4 +133,7 @@ body{
       .form-group {
         flex: 1 1 100%;
       }
+    }
+    p{
+      font-family: "BTS";
     }
