--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ body{
      }
       @font-face {
       font-family: 'BTS';
-      src: url("../fonts/built\ titling\ sb.otf") format('opentype');
+      src: url("../fonts/built\ titling\ rg.otf") format('opentype');
      }
     .txt1{
       font-family: "BTS";
