--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ body{
       flex: 1 1 45%;
       display: flex;
       flex-direction: column;
+      justify-content: center;
     }
 
     label {
@@ -134,6 +135,6 @@ body{
         flex: 1 1 100%;
       }
     }
-    p{
+    span{
       font-family: "BTS";
     }
