--- a/css/style.css
+++ b/css/style.css
@@ -90,9 +90,7 @@ body{
       text-align: left;
     }
 
-    input[type="text"],
-    input[type="email"],
-    input[type="tel"] {
+    .formInput{
       padding: 12px;
       border: none;
       background-color: #fff;
