--- a/menu_pages/Shop/style.css
+++ b/menu_pages/Shop/style.css
@@ -38,7 +38,6 @@ body{
     
     .submit-button {
       margin-top: 10px;
-      /* padding: 12px 30px; */
       background-color: #00000000;
       color: #fff;
       border: 1px solid #fff;
@@ -46,6 +45,7 @@ body{
       font-weight: bold;
       text-transform: uppercase;
       letter-spacing: 1px;
+      
     }
 
     .submit-button:hover {
@@ -80,13 +80,14 @@ body{
       padding: 10px;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
-      box-sizing: border-box; 
+      justify-content: center;
+      box-sizing: border-box;
     }
     .btn-price-container {
+      width: 100%;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center; /* <-- This centers button & price vertically */
-      flex-grow: 1; /* allows it to take available space */
+      justify-content: center;
+      flex-grow: 1; 
     }
