--- a/menu_pages/FAG_INFO/style.css
+++ b/menu_pages/FAG_INFO/style.css
@@ -27,16 +27,10 @@ body{
       justify-content: space-between;
       width: 100%;
     }
-        h1{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
+        h1,h2{
         font-family: "BTB";
     }
     div{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
         font-family: "BTB";
     }
     @font-face {
