--- a/menu_pages/BookHotel/style.css
+++ b/menu_pages/BookHotel/style.css
@@ -50,3 +50,45 @@ body{
     span{
       font-family: "BTS";
     }
+    form {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+    }
+
+    .form-group {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    label {
+      font-size: medium;
+      margin-bottom: 5px;
+      text-align: left;
+    }
+    .formInput{
+      padding: 6px;
+      border: none;
+      background-color: #fff;
+      color: #000;
+      font-size: 0.95rem;
+    }
+    .submit-button {
+      margin-top: 10px;
+      padding: 10px;
+      background-color: #00000000;
+      color: #fff;
+      border: 1px solid #fff;
+      cursor: pointer;
+      font-weight: bold;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+
+    .submit-button:hover {
+      background-color: #fff;
+      color: #000;
+    }
